# accounts-payable-agent

./: .env_sample  .gitignore  README.md  chat_app.py  deploy.py  pyproject.toml  requirements.txt
accounts_payable/: adk_deploy.sh  agent.py  prompt.py
accounts_payable/data/: .xero_tokens.json
accounts_payable/shared_libraries/: chart_of_accounts.json  xero_auth.py  xero_client.py  xero_mcp_toolset.py
accounts_payable/sub_agents/invoice_extraction/: agent.py  tools.py
accounts_payable/sub_agents/reconciliation/: agent.py  tools.py
accounts_payable/sub_agents/xero_bill/: agent.py  tools.py
accounts_payable/sub_agents/xero_contact/: agent.py  tools.py
accounts_payable/sub_agents/xero_payment/: agent.py  tools.py
chat_app/: Dockerfile  auth_config.yaml  build_and_deploy.sh  chat_app.py  run_local.sh
xero-mcp-server/: Build_and_push.sh  Dockerfile  package.json  server.mjs
xero-mcp-server/k8s/: create_repo_and_secrets.sh  deployment.yaml
